added java sdk 7,8 <= this is just a quick alias xD